# python-project-50

./: Makefile  README.md  demo.cast  makefile  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: hexlet-check.yml
gendiff/: main.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
